styling the slider and making sure it aligns correctly

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -26,9 +26,10 @@ body {
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
-.navbar {
+.navbar .navbar-inverse {
   background: image_url('zig-zag-wool.png');
   box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom: 0;
 }
 
 .navbar-toggler-icon {
@@ -39,6 +40,7 @@ body {
   color: #42f48f;
   font-family: 'source_code_proregular', sans-serif;
   font-size: 26px;
+  margin-bottom: 0;
 }
 
 .pagination {
@@ -130,6 +132,7 @@ img {
 }
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  
   width: 100%;
 
 }
@@ -147,9 +150,14 @@ img {
 
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
-  
 }
 
 .carousel img {
         object-fit: contain;
 }
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+  display: block;
+ } 
